manifests/virtualservice-canary-productpage-latest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-latest
spec:
  hosts:
    - productpage
  http:
    - route:
        - destination: productpage
          weight: "45"
        - destination: {host: productpage, subset: "v1\nlatest\nlatest"}
          weight: "45"
        - destination: {host: productpage, subset: "v1\nlatest\nlatest"}
          weight: "45"
